--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "newsapi": "^2.4.1",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
